test/Fail/Issue1975.err
Issue1975.agda:34.7-10: error: [UnequalTerms]
true != false of type Bool
when checking that the pattern c x has type M.D false
